2005-08-08  Corinna Vinschen  <corinna@vinschen.de>

	* ftw.c: Include winsup.h.
	* nftw.c: Ditto.
	* include/ftw.h: Guard declarations appropriately.

2005-08-08  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (DLL_OFILES): Add fts.o, ftw.o, nftw.o.
	* cygwin.din: Export fts_children, fts_close, fts_get_clientptr,
	fts_get_stream, fts_open, fts_read, fts_set, fts_set_clientptr,
	ftw, nftw.
	* fts.c: New file, imported from FreeBSD.
	* ftw.c: Ditto.
	* nftw.c: Ditto.
	* include/fts.h: Ditto.
	* include/ftw.h: Ditto.
	* include/cygwin/version.h: Bump API minor number.

2005-08-07  Christopher Faylor  <cgf@timesys.com>

	* Makefile.in (dtable_CFLAGS): Use -fomit-frame-pointer and
	-fcheck-new.
	* cygheap.cc (cmalloc): Only emit system_printf warnings on failure if
	DEBUGGING.
	(crealloc): Ditto.
	(ccalloc): Ditto.
	* dtable.cc (build_fh_name): Treat NULL return from cnew as indicative
	of EMFILE condition.
	(build_fh_dev): Ditto.
	(dtable::dup_worker): Handle NULL return from build_fh_pc.
	(dtable::vfork_child_dup): Trust dup_worker to set errno.
	* fhandler.h (fhandler_base::new): Mark as nothrow.

2005-08-07  Christopher Faylor  <cgf@timesys.com>

	* dllfixdbg: New perl script.
	* configure.in: Detect objcopy, objdump, strip.
	* configure: Regenerate.
	* Makefile.in: Pass target objcopy/objdump to new dllfixdbg script.
	Remove previous perl check.
	* cygwin.sc: Add .gnu_debuglink_overlay section for eventual
	replacement with .gnu_debuglink section.  Revert move of cygheap to end
	of image.

2005-08-06  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Allow previous patch to work in a 64 bit environment.

2005-08-06  Christopher Faylor  <cgf@timesys.com>

	* Makefile.in: Warn when end of cygheap is not on 64k boundary.
	* cygwin.sc: Try harder to ensure that cygheap is on a 64k boundary.
	Move cygheap to end of image to stop interference from unstripped debug
	regions.

2005-08-06  Christopher Faylor  <cgf@timesys.com>
